--- a/react-calling-apis/src/frontend/package.json
+++ b/react-calling-apis/src/frontend/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.39.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "swr": "^2.1.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
