--- a/next-api/package.json
+++ b/next-api/package.json
@@ -12,10 +12,12 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.60.0",
     "typescript": "5.0.2"
   }
 }
